--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - pip install boto
   - pip install codecov
-  - pip install ocverage
+  - pip install coverage
 
 script:
   - coverage run -m unittest discover
