--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install boto
   - pip install codecov
   - pip install coverage
+  - pip install six
 
 script:
   - coverage run -m unittest discover
