--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - pip install codecov
   - pip install coverage
   - pip install six
+  - pip install pytz
 
 script:
   - coverage run -m unittest discover
