--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install pytz
 
 script:
-  - coverage run --omit="*/examples*" -m unittest discover
+  - coverage run -m unittest discover
 
 after_success:
   - codecov
