--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda config --add channels conda-forge
-  - conda install -y sphinx pandoc nbconvert ipykernel boto3 arm-pyart pytz six
+  - conda install -y sphinx pandoc nbconvert ipykernel boto3 arm_pyart pytz six
   - pip install nbsphinx
   - source activate test-environment
   - python setup.py install
