--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 
 script:
   - coverage run -m unittest discover
-  - sphinx-build html ./docs/build ./docs/source
+  - sphinx-build html ./docs/source ./docs/build
 
 after_success:
   - codecov
