--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - conda config --add channels conda-forge
   - conda install -y sphinx pandoc nbconvert ipykernel boto3 arm_pyart pytz six
-  - pip install nbsphinx coverage codecov
+  - pip install nbsphinx coverage codecov sphinx_rtd_theme
   - source activate test-environment
   - python setup.py install
 
