attempts to get docker development containers to use anaconda...still needs some work

--- a/docker_devel/2.7/docker-compose.dev.yml
+++ b/docker_devel/2.7/docker-compose.dev.yml
@@ -1,4 +1,9 @@
-app:
-  build: .
-  volumes:
-  - .:/app
+version: '2'
+
+services:
+  app:
+    container_name: nexradaws2.7
+    build: .
+    image: aarande/nexradaws:2.7
+    volumes:
+    - .:/app
