Update Codecov step in CI to run only on push or valid pull requests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
           coverage xml -o coverage.xml
 
       - name: Upload coverage to Codecov
+        if: |
+          github.event_name == 'push' ||
+          (github.event_name == 'pull_request' &&
+           github.event.pull_request.head.repo.full_name == github.repository)
         uses: codecov/codecov-action@v4
         with:
           files: coverage.xml
