--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
-description-file = README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
 [bdist_wheel]
-universal=0
+universal = 0
