--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,14 +17,12 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install build backend
+      - name: Install build backend and latest build tools
         run: |
-          python -m pip install --upgrade pip
-          pip install build
+          python -m pip install --upgrade pip setuptools wheel build
 
       - name: Build sdist and wheel
-        run: |
-          python -m build
+        run: python -m build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
