--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nexradaws"
-version = "2.0.0"
+version = "2.0"
 description = "Query and download NEXRAD data from AWS S3 storage."
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
     { name = "Aaron Anderson"}
 ]
-license = { text = "MIT" }
+license = "MIT"
 keywords = ["weather", "radar", "nexrad", "aws", "amazon"]
 dependencies = [
     "boto3",
