--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nexradaws"
-version = "2.0"
+version = "2.0.0"
 description = "Query and download NEXRAD data from AWS S3 storage."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,6 +12,7 @@ authors = [
     { name = "Aaron Anderson"}
 ]
 license = "MIT"
+license-files = ["LICEN[CS]E*"]
 keywords = ["weather", "radar", "nexrad", "aws", "amazon"]
 dependencies = [
     "boto3",
