--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,14 @@ jobs:
           name: dist
           path: dist
 
+      - name: List dist contents
+        run: ls -lh dist
+
+      - name: Check wheel metadata
+        run: |
+          pip install twine
+          twine check dist/*      
+
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.10.1
         with:
