update `pyproject.toml`: add optional `pyart` dependency; update GitHub Actions workflow to enable overwriting artifacts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,8 @@ Documentation = "https://nexradaws.readthedocs.io/en/latest/"
 Repository = "https://github.com/aarande/nexradaws"
 Issues = "https://github.com/aarande/nexradaws/issues"
 
+[project.optional-dependencies]
+pyart = ["arm_pyart"]
+
 [tool.setuptools]
 packages = ["nexradaws"]
