--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           name: dist
           path: dist/*
+          overwrite: true
 
   publish-testpypi:
     name: Publish to TestPyPI (on main/master pushes)
