update `pyproject.toml`: switch to `setuptools.find_packages`, adjust packages configuration; update GitHub Actions workflow to debug metadata before publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,10 @@ jobs:
           name: dist
           path: dist
 
+      - name: Debug Show METADATA fields
+        run: |
+          unzip -p dist/*.whl *.dist-info/METADATA
+
       - name: List dist contents
         run: ls -lh dist
 
