--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,7 @@ jobs:
         run: ls -lh dist
 
       - name: Check wheel metadata
+        continue-on-error: true
         run: |
           pip install twine
           twine check dist/*      
